// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge renders 1`] = `
<span
  className="sc-jFkmsu iRvZkV"
  size="xsmall"
>
  Default
</span>
`;

exports[`Badge renders with custom background color 1`] = `
<span
  className="sc-jFkmsu ihBlIJ"
  size="xsmall"
>
  Default
</span>
`;

exports[`Badge renders with icons 1`] = `
<div
  className="flex justify-around w-full"
>
  <span
    className="sc-jFkmsu iRvZkV"
    size="xsmall"
  >
    Default
  </span>
  <span
    className="sc-jFkmsu iRvZkV"
    size="xsmall"
  >
    Default
  </span>
</div>
`;

exports[`Badge renders with small size 1`] = `
<span
  className="sc-jFkmsu gCbcUe"
  size="small"
>
  Default
</span>
`;
